# IndexPlatform

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: test.yml
configs/: etf_mapping.yaml  indices.yaml
configs/strategies/: buy_hold.yaml  momentum.yaml  moving_average.yaml
data/parquet/: prices.parquet
docs/: CODEX提示词.md  产品说明.md  任务清单.md  开发路线图.md  系统架构.md
examples/: README.md
examples/configs/: buy_hold_demo.yaml  momentum_demo.yaml  moving_average_demo.yaml
examples/data/: sample_index_prices.csv
index_platform/: __init__.py
index_platform/analysis/: __init__.py  index_compare.py
index_platform/backtest/: __init__.py  costs.py  engine.py  runner.py
index_platform/calendar/: __init__.py  trading_calendar.py
index_platform/cli/: backtest_cmd.py  data_cmd.py  main.py  monitor_cmd.py  report_cmd.py
index_platform/config/: __init__.py  backtest_config.py
index_platform/dashboard/: app.py
index_platform/data/: __init__.py  csv_adapter.py  fetcher.py  quality.py  schema.py  validators.py
index_platform/fx/: __init__.py  converter.py  csv_adapter.py  schema.py
index_platform/metrics/: __init__.py  performance.py
index_platform/monitor/: __init__.py  logger.py  run_state.py
index_platform/prediction/: __init__.py  base.py  baseline.py  features.py
index_platform/report/: __init__.py  builder.py
index_platform/research/: __init__.py  parameter_sweep.py  walk_forward.py
index_platform/storage/: __init__.py  backtest_store.py  duckdb_query.py  parquet_store.py
index_platform/strategy/: __init__.py  base.py  buy_hold.py  momentum.py  moving_average.py  prediction_strategy.py
index_platform/universe/: __init__.py  etf_mapping.py  registry.py
outputs/run_state/: bt_20260607084542_3147665e.json  bt_20260607084620_5c9ec023.json  bt_20260607084713_61b7978e.json  bt_20260607084854_dac5ba53.json  bt_20260607084952_ed218efc.json  bt_20260607085043_23c2d748.json  bt_20260607152336_6ad39708.json  bt_20260607153113_394d3ee0.json
tests/: test_package.py
tests/analysis/: test_index_compare.py
tests/backtest/: test_costs.py  test_engine_buy_hold.py  test_multi_asset_engine.py
tests/calendar/: test_trading_calendar.py
tests/cli/: test_cli.py  test_main.py
tests/config/: test_backtest_config.py
tests/dashboard/: test_dashboard_pages.py  test_run_monitor.py  test_strategy_lab.py
tests/data/: test_csv_adapter.py  test_fetcher.py  test_quality.py  test_validators.py
(+50 files in other folders)
