[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "index-platform"
version = "0.1.0"
description = "A local-first index investment research and backtesting platform."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "IndexPlatform Contributors" }
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyarrow>=15.0",
  "rich>=13.0",
  "typer>=0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
idx = "index_platform.cli.main:main"

[tool.setuptools.packages.find]
include = ["index_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
